Second static dump of presentation

--- a/static/index.html
+++ b/static/index.html
@@ -446,50 +446,58 @@
 </div>
 <div data-section="meetup/intro" data-title="01-intro" id="meetup_intro_01-intro2" class="slide" data-transition="none">
 <div class="content " ref="meetup/intro/01-intro:2">
-<h1>Jevons Paradox</h1>
+<h1>Lesson in Economics</h1>
 
-<h2>The more efficiently a resource is used the overall usage of that resource will increase</h2>
+<h2>Jevons Paradox</h2>
 </div>
 <canvas class="annotations"></canvas>
 </div>
 <div data-section="meetup/intro" data-title="01-intro" id="meetup_intro_01-intro3" class="slide" data-transition="none">
 <div class="content " ref="meetup/intro/01-intro:3">
-<h1>Easier sign up leads to more users for a site</h1>
+<h1>More efficient production increases total usage</h1>
+
+<h2>Easier time starting a new project means more Clojure Users</h2>
 </div>
 <canvas class="annotations"></canvas>
 </div>
 <div data-section="meetup/intro" data-title="01-intro" id="meetup_intro_01-intro4" class="slide" data-transition="none">
 <div class="content " ref="meetup/intro/01-intro:4">
-<h1>Clojure CLI dependency tool</h1>
-
-<h2>Lowers project startup and experimentation cost</h2>
+<h1>Easier sign up leads to more users for a site</h1>
 </div>
 <canvas class="annotations"></canvas>
 </div>
 <div data-section="meetup/intro" data-title="01-intro" id="meetup_intro_01-intro5" class="slide" data-transition="none">
 <div class="content " ref="meetup/intro/01-intro:5">
+<h1>Clojure CLI dependency tool</h1>
+
+<h2>Will make Clojure libraries and tools sharper</h2>
+</div>
+<canvas class="annotations"></canvas>
+</div>
+<div data-section="meetup/intro" data-title="01-intro" id="meetup_intro_01-intro6" class="slide" data-transition="none">
+<div class="content " ref="meetup/intro/01-intro:6">
 <h1>Bold claim</h1>
 
 <h2>Let's test this right now</h2>
 </div>
 <canvas class="annotations"></canvas>
 </div>
-<div data-section="meetup/intro" data-title="01-intro" id="meetup_intro_01-intro6" class="slide" data-transition="none">
-<div class="content " ref="meetup/intro/01-intro:6">
+<div data-section="meetup/intro" data-title="01-intro" id="meetup_intro_01-intro7" class="slide" data-transition="none">
+<div class="content " ref="meetup/intro/01-intro:7">
 <h1>Test</h1>
 
 <h2>Add latest version of ClojureScript to new or existing project</h2>
 </div>
 <canvas class="annotations"></canvas>
 </div>
-<div data-section="meetup/intro" data-title="01-intro" id="meetup_intro_01-intro7" class="slide" data-transition="none">
-<div class="content " ref="meetup/intro/01-intro:7">
+<div data-section="meetup/intro" data-title="01-intro" id="meetup_intro_01-intro8" class="slide" data-transition="none">
+<div class="content " ref="meetup/intro/01-intro:8">
 <h1>Jeopardy Theme music</h1>
 </div>
 <canvas class="annotations"></canvas>
 </div>
-<div data-section="meetup/intro" data-title="01-intro" id="meetup_intro_01-intro8" class="slide" data-transition="none">
-<div class="content " ref="meetup/intro/01-intro:8">
+<div data-section="meetup/intro" data-title="01-intro" id="meetup_intro_01-intro9" class="slide" data-transition="none">
+<div class="content " ref="meetup/intro/01-intro:9">
 <h1>Bonus round</h1>
 
 <h2>Add a local project to an existing project</h2>
@@ -500,17 +508,17 @@
 </div>
 <canvas class="annotations"></canvas>
 </div>
-<div data-section="meetup/intro" data-title="01-intro" id="meetup_intro_01-intro9" class="slide" data-transition="none">
-<div class="content " ref="meetup/intro/01-intro:9">
+<div data-section="meetup/intro" data-title="01-intro" id="meetup_intro_01-intro10" class="slide" data-transition="none">
+<div class="content " ref="meetup/intro/01-intro:10">
 <h1>Why are these tasks so annoyingly tedious?</h1>
 </div>
 <canvas class="annotations"></canvas>
 </div>
 <div data-section="meetup/busywork" data-title="01-busywork" id="meetup_busywork_01-busywork1" class="slide" data-transition="none">
 <div class="content " ref="meetup/busywork/01-busywork:1">
-<h1>Look at steps after changes</h1>
+<h1>How do we publicize changes?</h1>
 
-<h2>After <code>git commit</code> and <code>git push</code>
+<h2>Changes mean after <code>git commit</code> and <code>git push</code>
 </h2>
 </div>
 <canvas class="annotations"></canvas>
@@ -518,24 +526,35 @@
 <div data-section="meetup/busywork" data-title="01-busywork" id="meetup_busywork_01-busywork2" class="slide" data-transition="none">
 <div class="content " ref="meetup/busywork/01-busywork:2">
 <h1>Increment Version Number</h1>
+
+<h2>Go from <code>1.1.0</code> to <code>1.2.0</code>
+</h2>
 </div>
 <canvas class="annotations"></canvas>
 </div>
 <div data-section="meetup/busywork" data-title="01-busywork" id="meetup_busywork_01-busywork3" class="slide" data-transition="none">
 <div class="content " ref="meetup/busywork/01-busywork:3">
-<h1>Build artifact (e.g. jar)</h1>
+<h1>Build artifact</h1>
+
+<h2>Compile <code>bird.utopia</code> to <code>bird-utopia-1.4.0.jar</code>
+</h2>
 </div>
 <canvas class="annotations"></canvas>
 </div>
 <div data-section="meetup/busywork" data-title="01-busywork" id="meetup_busywork_01-busywork4" class="slide" data-transition="none">
 <div class="content " ref="meetup/busywork/01-busywork:4">
-<h1>Deploy artifact (e.g. maven, clojars)</h1>
+<h1>Deploy artifact</h1>
+
+<h2>Deploy to Maven with GPG credentials</h2>
 </div>
 <canvas class="annotations"></canvas>
 </div>
 <div data-section="meetup/busywork" data-title="01-busywork" id="meetup_busywork_01-busywork5" class="slide" data-transition="none">
 <div class="content " ref="meetup/busywork/01-busywork:5">
-<h1>Announce new version(optional)</h1>
+<h1>Announce new version</h1>
+
+<h2>Post on mailing list, slack announcement, <code>CHANGES.md</code>
+</h2>
 </div>
 <canvas class="annotations"></canvas>
 </div>
@@ -564,13 +583,15 @@
 <div class="content " ref="meetup/busywork/01-busywork:8">
 <h1>Thought Experiment</h1>
 
-<p><br></p>
-
-<h2>Artifact =&gt; Source Cdoe</h2>
+<h2>Use source code as artifact</h2>
 
 <p><br></p>
 
-<h2>Version Number =&gt; Commit Hash</h2>
+<h2>Instead of JAR we use Source Cdoe</h2>
+
+<p><br></p>
+
+<h2>Instead of Version Number we use a Commit Hash</h2>
 </div>
 <canvas class="annotations"></canvas>
 </div>
@@ -578,18 +599,34 @@
 <div class="content " ref="meetup/busywork/01-busywork:9">
 <h1>Treat Libraries as source code</h1>
 
-<h2>Many potential Points of Failure</h2>
+<h2>Adding a library is as easy as pointing to a Github project</h2>
 </div>
 <canvas class="annotations"></canvas>
 </div>
 <div data-section="meetup/busywork" data-title="01-busywork" id="meetup_busywork_01-busywork10" class="slide" data-transition="none">
 <div class="content " ref="meetup/busywork/01-busywork:10">
+<h1>Many potential Points of Failure</h1>
+
 <ul>
-<li>Adding library breaks current functionality</li>
-<li>Updating breaks working functionality</li>
-<li>Library load order matters</li>
+<li>Adding library breaks current functionality
+
+<ul>
+<li>Monkey Patching, Namespace conflicts</li>
+</ul>
+</li>
+<li>Updating library breaks previous functionality
+
+<ul>
+<li>Old functionality removed, changed</li>
+</ul>
+</li>
+<li>Library load order matters
+
+<ul>
+<li>Global mutable state</li>
+</ul>
+</li>
 <li>Library needs tools to work</li>
-<li>Excessive amounts of Glue Code</li>
 </ul>
 </div>
 <canvas class="annotations"></canvas>
@@ -604,7 +641,13 @@
 <div class="content " ref="meetup/growing_up/01-growing_up:2">
 <h1>Namespaces and Immutability</h1>
 
-<h2>Libraries do not overwrite each other functionality or data</h2>
+<p><br></p>
+
+<h2>Everyone can have their own development space</h2>
+
+<p><br></p>
+
+<h2>Using a library does not modify it</h2>
 </div>
 <canvas class="annotations"></canvas>
 </div>
@@ -612,35 +655,43 @@
 <div class="content " ref="meetup/growing_up/01-growing_up:3">
 <h1>Protocols and EDN</h1>
 
-<h2>Defined extension points that are not tied to the library</h2>
+<p><br></p>
+
+<h2>Defined extension points to hook into</h2>
+
+<p><br></p>
+
+<h2>Extensions can be read without library</h2>
 </div>
 <canvas class="annotations"></canvas>
 </div>
 <div data-section="meetup/growing_up" data-title="01-growing_up" id="meetup_growing_up_01-growing_up4" class="slide" data-transition="none">
 <div class="content " ref="meetup/growing_up/01-growing_up:4">
-<h1>Data first</h1>
+<h1>Addition based growth</h1>
 
-<h2>Glue code is concerned with data transformations no mini language translation</h2>
+<p><br></p>
 
-<h3>Only need standard library for glue</h3>
+<h2>Old functionality is never erased</h2>
+
+<p><br></p>
+
+<h3>Grows in power the bigger the dependency tree</h3>
 </div>
 <canvas class="annotations"></canvas>
 </div>
 <div data-section="meetup/growing_up" data-title="01-growing_up" id="meetup_growing_up_01-growing_up5" class="slide" data-transition="none">
 <div class="content " ref="meetup/growing_up/01-growing_up:5">
-<h1>Addition based growth</h1>
+<h1>Clojure only needs source code</h1>
 
-<h2>Moving to a new version of the library means all old functionality still works</h2>
-
-<h3>Grows in power the bigger then dependency tree</h3>
+<h2>Allows consumption and experimentation as quickly as changes are made</h2>
 </div>
 <canvas class="annotations"></canvas>
 </div>
 <div data-section="meetup/growing_up" data-title="01-growing_up" id="meetup_growing_up_01-growing_up6" class="slide" data-transition="none">
 <div class="content " ref="meetup/growing_up/01-growing_up:6">
-<h1>Allows for confident experimentation</h1>
+<h1>Clojure CLI dependency tool</h1>
 
-<h2>Enough talk, how does it work?</h2>
+<h2>It's super awesome, how do we use it?</h2>
 </div>
 <canvas class="annotations"></canvas>
 </div>
@@ -831,13 +882,17 @@ src:/home/peter/.m2/repository/org/clojure/clojure/1.9.0/clojure-1.9.0.jar:/home
 </div>
 <div data-section="meetup/outro" data-title="01-outro" id="meetup_outro_01-outro1" class="slide" data-transition="none">
 <div class="content " ref="meetup/outro/01-outro:1">
-<h2>Clojure CLI shortens and simplifies the process of getting new dependencies and starting up Clojure project</h2>
+<h1>Clojure CLI</h1>
+
+<h2>Helps bring new Clojure Users</h2>
+
+<h2>Shorter feedback cycle helps seasoned users</h2>
 </div>
 <canvas class="annotations"></canvas>
 </div>
 <div data-section="meetup/outro" data-title="01-outro" id="meetup_outro_01-outro2" class="slide" data-transition="none">
 <div class="content " ref="meetup/outro/01-outro:2">
-<h1>Grab the Clojure CLI and expirement today!</h1>
+<h1>Grab the Clojure CLI and experiment today!</h1>
 </div>
 <canvas class="annotations"></canvas>
 </div>
